Fix upload all visibility on stage-4 of the test

--- a/test_project-ramon/css/styles.css
+++ b/test_project-ramon/css/styles.css
@@ -329,7 +329,9 @@ select:focus {
 .stage-1 #upload-view .footer > a,
 .stage-1 #upload-view .footer > button,
 .stage-2 #upload-view .footer > a,
-.stage-2 #upload-view .footer > button {
+.stage-2 #upload-view .footer > button,
+.stage-4 #upload-view .footer > a,
+.stage-4 #upload-view .footer > button {
   opacity: 0.4;
   pointer-events: none;
 }
